# esp32deets

./: .project-commands  CMakeLists.txt  Kconfig  LICENSE  README.org  buttons.cpp  drv2605.cpp  eventloop.cpp  flash.cpp  http.cpp  i2c.cpp  madgwick.cpp  mpu6050.cpp  nrf24.cpp  rf95.cpp  sht3xdis.cpp  smartconfig.cpp  ssd1306.c  tca9548a.cpp  u8g2_esp32_hal.c  wifi.cpp
include/: buttons.hpp  drv2605-defs.hh  drv2605.hh  flash.hpp  http.hpp  i2c.hh  madgwick.hh  mpu6050-regs.hh  mpu6050.hh  mpu6050.ipp  nrf24.hh  rf95.hpp  ringbuffer.hh  sht3xdis.hpp  smartconfig.hpp  ssd1306.h  tca9548a.hpp  u8g2_esp32_hal.h  wifi.hh
include/deets/: eventloop.hpp  i2c.hpp  wifi.hpp
include/deets/i2c/: sht3xdis.hpp  tca9548a.hpp
